--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <meta property = "og:image" content ="https://www.youtube.com/img/desktop/yt_1200.png" />
+    <meta property = "og:image" content ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlZ1DfmMpPqUmzDYd9jG92MO8bwtx6AlAQQF5qCns4rntFGjTWHeNqUN3pi-juBgP5nu0&usqp=CAU" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
